GNOME Bugzilla – Bug 792638
vaapidisplay: invalid property warnings with mesa radeon driver
Last modified: 2018-01-23 10:44:23 UTC
** (gst-play-1.0:32456): WARNING **: ../subprojects/gstreamer-vaapi/gst-libs/gst/vaapi/gstvaapidisplay.c:990: invalid property id 3 for "hue" of type 'GParamFloat' in 'GstVaapiDisplayWayland' ** (gst-play-1.0:32456): WARNING **: ../subprojects/gstreamer-vaapi/gst-libs/gst/vaapi/gstvaapidisplay.c:990: invalid property id 4 for "saturation" of type 'GParamFloat' in 'GstVaapiDisplayWayland' ** (gst-play-1.0:32456): WARNING **: ../subprojects/gstreamer-vaapi/gst-libs/gst/vaapi/gstvaapidisplay.c:990: invalid property id 5 for "brightness" of type 'GParamFloat' in 'GstVaapiDisplayWayland' ** (gst-play-1.0:32456): WARNING **: ../subprojects/gstreamer-vaapi/gst-libs/gst/vaapi/gstvaapidisplay.c:990: invalid property id 6 for "contrast" of type 'GParamFloat' in 'GstVaapiDisplayWayland' I can provide backtrace and/or GST_DEBUG logs if needed :)
Thread 33 "vqueue:src" received signal SIGTRAP, Trace/breakpoint trap.
+ Trace 238341
Thread 140735453996800 (LWP 15835)
Created attachment 367010 [details] [review] vaapisink: check for display's color-balance properties Check for display's color-balance properties, available by the VA-API driver, before setting them. Also logs an info message of those unavailable properties.
Warnings gone. Thanks!
Attachment 367010 [details] pushed as f365038 - vaapisink: check for display's color-balance properties